--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+html, body, #root {
+  font: 0.9rem sans-serif;
+  background: #0a1f44;
+  color: #1e2432;
+  height: 100%;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-container {
+  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418) ), url('./assets/forest.gif');
+  background-size: cover;
+  background-position: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-container {
+  height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  padding-top: 5%;
 }
 
-.App-link {
-  color: #61dafb;
+.search {
+  outline: none;
+  text-align: center;
+  padding: 15px 6.8%;
+  border-radius: 20px;
+  border: none;
+  margin-bottom: 3%;
+  background: rgba(250, 250, 250, 0.);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.city {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px 3%;
+  border-radius: 20px;
+  background: rgba(218, 213, 213, 0.65);
+  box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
+  width: 50%;
+}
+.city-temp {
+  font-size: 4rem;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-left: 0px;
+  color: #1e2432;
+}
+
+.city sup {
+  font-size: 0.5em;
+}
+.city1 {
+  /* display: flex; */
+  /* justify-content: space-between; */
+  padding: 40px 3%;
+  border-radius: 20px;
+  background: rgba(218, 213, 213, 0.75);
+  box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
+  width: 50%;
 }
