--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ html, body, #root {
   border-radius: 20px;
   border: none;
   margin-bottom: 3%;
-  background: rgba(250, 250, 250, 0.);
+  background: rgba(250, 250, 250, 0.9);
 }
 
 .city {
